fixed the date and time inputs on the form and in event so they are side by side. started to play with mysql db and php but that experiment got cut short. api/ in public plus a test php file are not substantial contributions.

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,15 @@ select, input {
   margin: 5% 0;
 }
 
+.datetime-input {
+  display: flex;
+  justify-content: space-between;
+}
+
+input[type="date"], input[type="time"] {
+  width: 45%;
+}
+
 input[type="checkbox"] {
   width: unset;
 }
